--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,6 +1,10 @@
 <%- include('includes/header') %>
 
 <body>
+  <div>
+    <div>PRODUCTS PAGE</div>
+    <div><%=member.memberNick%></div>
+  </div>
   <div>PRODUCTS PAGE</div>
 </body>
 <%- include('includes/footer') %>
